# StructuresAndAlgorithmsForDataProcessing

./: CMakeLists.txt  main.cpp
Practice_1/: Pr1.cpp  Pr1.h
Practice_1/Ex_1/: Ex1.cpp
Practice_1/Ex_2/: Ex2.cpp  Ex2.h
Practice_3/: PhoneOwnerExtended.cpp
Practice_3/Exercise/: Ex3_2.cpp  Ex3_3.cpp
Practice_3/Main/: BinFileWithHashTable.cpp  BinFileWork.cpp  BinFileWork.h  HashTable.cpp  HashTable.h
Practice_4/: PerfectlyBalancedBinaryTree.cpp  PerfectlyBalancedBinaryTree.h  Practice4.cpp
Practice_5/: BinFileWorkCut.cpp  BinFileWorkCut.h  PhoneOwnerCut.cpp  PhoneOwnerCut.h  Practice5.cpp  Practice5.h
Practice_5/BinaryTrees/: BinarySearchTree.cpp  BinarySearchTree.h  BinaryTree.cpp  BinaryTree.h  SplayTree.cpp  SplayTree.h
Practice_5/FileWork/: BinFileSearch.cpp  BinFileSearch.h  BinFileWorkCut.cpp  BinFileWorkCut.h
Practice_5/SearchClasses/: BinFileSearch.cpp  BinFileSearch.h  HashTableSearch.cpp  HashTableSearch.h  ISearchClass.cpp  ISearchClass.h
Practice_6/: MatrixGraph.cpp  MatrixGraph.h  Practice6.cpp  Practice6.h
Practice_7/: Practice7.cpp  Practice7.h
