cmake_minimum_required(VERSION 3.26)
project(StructuresAndAlgorithmsForDataProcessing)

set(CMAKE_CXX_STANDARD 17)

add_executable(StructuresAndAlgorithmsForDataProcessing main.cpp
        Practice_1/Pr1.cpp
        Practice_1/Pr1.h
        Practice_1/Ex_2/Ex2.cpp
        Practice_1/Ex_2/Ex2.h
        Practice_1/Ex_1/Ex1.cpp
        Practice_1/Ex_1/Ex1.h
)
